bhavya finished some shit

--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -62,7 +62,7 @@ body {
     font-size: 1.5rem;
   }
   
-  .login-form input {
+  .login-form2 input {
     width: 100%;
     padding: 10px;
     margin: 0.5rem 0;
