--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -5,7 +5,7 @@
     padding: 12px 20px;
     background: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    position: fixed;
+    position: fixed; 
     top: 0;
     left: 0;
     width: 100%;
@@ -37,7 +37,7 @@
   }
   
   .navLink:hover {
-    color: blue;
+    color: rgb(0, 0, 0);
   }
   
   /* Align search bar to the right */
