--- a/src/Personalization.css
+++ b/src/Personalization.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-image: url('./assets/paperbg.jpg');
-    background-size: cover; /* Ensures the image covers the whole screen */
+    background-size: cover; 
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents repeating */
     background-attachment: fixed; /* Keeps the image fixed while scrolling */
