--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .logo {
   height: 10em;
   display: flex;
-  justify-content: center; /* Centers horizontally */
+  justify-content: left; /* Centers horizontally */
   align-items: center; /* Centers vertically */
   will-change: filter;
   transition: filter 300ms;
@@ -88,6 +88,7 @@
 
 .overlay {
   background: rgba(0, 0, 0, 0.5); /* Adjust the opacity (0.5 = 50% dark) */
+  backdrop-filter: blur(10px);
 }
 
 /* .background {
