--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -41,6 +41,7 @@
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
+    color: #e0e0e0;
   }
   
   .bento-item {
@@ -51,7 +52,7 @@
     text-align: center;
     font-size: 1.2rem;
     font-weight: bold;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 6px rgba(14, 173, 0, 0.1);
   }
   
   /* Large top frame */
@@ -80,8 +81,8 @@
   }
   
   .upload-frame {
-    color: black;
-    border: 2px dashed #ccc;
+    color: rgb(0, 124, 35);
+    border: 2px solid #1b7c00;
     border-radius: 8px;
     display: flex;
     justify-content: center;
@@ -108,9 +109,13 @@
   }
   .upload-frame.react:hover {
     filter: drop-shadow(0 0 2em #000000aa);
-  }
-  
-  input[type="file"] {
-    display: none; /* Hide default file input */
+  } 
+
+  input[type="text"] {
+    margin-top: 20px;
+    height: 2em;
+    width: 20em;
+    background-color: white;
+    color: black;
   }
   
