--- a/src/Login.css
+++ b/src/Login.css
@@ -46,6 +46,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
+    backdrop-filter: blur(3px);
   }
 
   .background::before {
